--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,11 +18,22 @@ jobs:
         with:
           node-version: '16'  # Spécifiez la version de Node.js nécessaire
 
+      - name: Clean npm cache
+        run: npm cache clean --force
+
       - name: Install dependencies
         run: npm install
 
+      - name: List Node.js and npm versions
+        run: |
+          node --version
+          npm --version
+
+      - name: List installed packages
+        run: ls -l node_modules/.bin
+
       - name: Run tests
-        run: npm test
+        run: ./node_modules/.bin/mocha
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
