--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,57 +1,61 @@
-name: CI/CD Pipeline
+name: CI/CD
 
 on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  build-and-test:
+  build:
+
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        node-version: [16.x, 20.x]
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - name: Set up Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
         with:
-          node-version: '16'  # Spécifiez la version de Node.js nécessaire
+          node-version: ${{ matrix.node-version }}
 
-      - name: Clean npm cache
-        run: npm cache clean --force
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: List Node.js and npm versions
-        run: |
-          node --version
-          npm --version
-
-      - name: List permissions of mocha
-        run: ls -l ./node_modules/.bin/mocha
-
-      - name: Fix permissions for mocha
+      - name: Ensure Mocha is executable
         run: chmod +x ./node_modules/.bin/mocha
 
-      - name: Run tests
+      - name: Install dependencies
+        run: npm install 
+
+      - name: Install express
+        run: npm install express
+
+      - name: start the server
+        run: |
+          node server.js &
+
+          sleep 5
+
+          npm test
+
+          kill $(lsof -t -i:3000) || true
+
+      - name: Run all tests
         run: npm test
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+      - name: Build Docker image
+        run: |
+          docker build -t ghilesbesseghir039469/pipeline:latest .
+          docker images  # Optional: display Docker images for verification
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Log in to Docker Hub
+        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/todo-app:latest
-
-      - name: Logout from Docker Hub
-        run: docker logout
+      - name: Push Docker image to Docker Hub
+        run: |
+          docker push ghilesbesseghir039469/pipeline:latest
