--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,14 +36,8 @@ jobs:
         run: npm install express
 
       - name: start the server
-        run: |
-          node server.js &
-
-          sleep 5
-
-          npm test
-
-          kill $(lsof -t -i:3000) || true
+        run:
+          node server.js
 
       - name: Run all tests
         run: npm test
