--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,11 +36,14 @@ jobs:
         run: npm install express
 
       - name: start the server
-        run:
-          node server.js
+        run: |
+          node server.js &
 
-      - name: Run all tests
-        run: npm test
+          sleep 5
+
+          npm test
+
+          kill $(lsof -t -i:3000) || true
 
       - name: Build Docker image
         run: |
