--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI/CD
+name: CI/CD Pipeline
 
 on:
   push:
@@ -26,23 +26,26 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
+      - name: Install dependencies
+        run: npm install
+
       - name: Ensure Mocha is executable
         run: chmod +x ./node_modules/.bin/mocha
 
-      - name: Install dependencies
-        run: npm install 
-
-      - name: Install express
-        run: npm install express
-
-      - name: start the server
+      - name: Start the server in background
         run: |
-          node server.js &
+          nohup node server.js > server.log 2>&1 &
 
-          sleep 5
+      - name: Wait for server to start
+        run: |
+          sleep 10 # Adjust sleep duration if needed
+          curl --silent --fail http://localhost:3000 > /dev/null
 
-          npm test
+      - name: Run tests
+        run: npm test
 
+      - name: Stop the server
+        run: |
           kill $(lsof -t -i:3000) || true
 
       - name: Build Docker image
