--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,15 +26,15 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      - name: Clean up port 3000
-        run: |
-          lsof -t -i:3000 | xargs kill -9 || true
-
       - name: Install dependencies
         run: npm install
 
       - name: Ensure Mocha is executable
         run: chmod +x ./node_modules/.bin/mocha
+
+      - name: Clean up any processes on port 3001
+        run: |
+          lsof -t -i:3001 | xargs kill -9 || true
 
       - name: Start the server in background
         run: |
@@ -43,8 +43,10 @@ jobs:
       - name: Wait for server to be available
         run: |
           while ! nc -z localhost 3001; do
+            echo "Waiting for server to start..."
             sleep 1
           done
+          echo "Server is up and running."
 
       - name: Run tests
         run: npm test
@@ -64,3 +66,7 @@ jobs:
       - name: Push Docker image to Docker Hub
         run: |
           docker push ghilesbesseghir039469/pipeline:latest
+
+      - name: Display server logs
+        run: cat server.log
+        if: failure()  # Display logs only if previous steps fail
