--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,9 +29,11 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Ensure Mocha is executable
+        run: chmod +x ./node_modules/.bin/mocha
+
       - name: Run tests
         run: npm test
-
 
       - name: Build Docker image
         run: |
