--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "node ./node_modules/.bin/mocha"
+    "test": "mocha"
   },
   "dependencies": {
     "express": "^4.19.2"
